--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ reqwest = { version = "0.12.12", features = ["json"] }
 serde = { version = "1.0.218", features = ["derive"] }
 serde_json = "1.0.139"
 sqlx = "0.8.3"
+tempfile = "3.19.1"
 tokio = { version = "1.43.0", features = ["full"] }
 tower-http = { version = "0.6.2", features = ["cors"] }
 tracing = "0.1.41"
